--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ GOOGLE_CLIENT_SECRET=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
 MONGODB_URI=mongodb+srv://new-user_31:river4689@cluster0.sburcmk.mongodb.net/?retryWrites=true&w=majority
 
 
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://sharegpt-two.vercel.app
+
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
 NEXTAUTH_SECRET=12Aj4LZc+r5GJrgjqgm+MXw6i8noglaAJntFGfj8YFM=
