--- a/.env
+++ b/.env
@@ -2,8 +2,9 @@ GOOGLE_ID=792156856933-g313dl8t5lj0j9udtnojluhfk6s8jc1q.apps.googleusercontent.c
 GOOGLE_CLIENT_SECRET=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
 MONGODB_URI=mongodb+srv://new-user_31:river4689@cluster0.sburcmk.mongodb.net/?retryWrites=true&w=majority
 
+SECRET=918907bb9d66331e16aaf1a54326ee65
 
-NEXTAUTH_URL=https://sharegpt-two.vercel.app
-
+# NEXTAUTH_URL=https://sharegpt-two.vercel.app
+NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
 NEXTAUTH_SECRET=12Aj4LZc+r5GJrgjqgm+MXw6i8noglaAJntFGfj8YFM=
