--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 GOOGLE_ID=792156856933-g313dl8t5lj0j9udtnojluhfk6s8jc1q.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-MONGODB_URI=mongodb+srv://new-user_31:river4689@cluster0.sburcmk.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://new-user_31:river4689@cluster0.sburcmk.mongodb.net/?
+retryWrites=true&w=majority
 
-SECRET=918907bb9d66331e16aaf1a54326ee65
+# SECRET=918907bb9d66331e16aaf1a54326ee65
 
-# NEXTAUTH_URL=https://sharegpt-two.vercel.app
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_URL=https://sharegpt-two.vercel.app
+# NEXTAUTH_URL=http://localhost:3000/login
+# NEXTAUTH_URL_INTERNAL=http://localhost:3000/login
 NEXTAUTH_SECRET=12Aj4LZc+r5GJrgjqgm+MXw6i8noglaAJntFGfj8YFM=
