--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
-    "mongodb": "^5.5.0",
-    "mongoose": "^7.1.1",
+    "express": "^4.18.2",
+    "mongodb": "3.7",
+    "mongoose": "^6.10.0",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
