--- a/.env
+++ b/.env
@@ -6,6 +6,5 @@ retryWrites=true&w=majority
 # SECRET=918907bb9d66331e16aaf1a54326ee65
 
 NEXTAUTH_URL=https://sharegpt-two.vercel.app
-# NEXTAUTH_URL=http://localhost:3000/login
-# NEXTAUTH_URL_INTERNAL=http://localhost:3000/login
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
 NEXTAUTH_SECRET=12Aj4LZc+r5GJrgjqgm+MXw6i8noglaAJntFGfj8YFM=
