db connected, db admin changed to read/write

--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ retryWrites=true&w=majority
 
 # SECRET=918907bb9d66331e16aaf1a54326ee65
 
-NEXTAUTH_URL=https://sharegpt-two.vercel.app
+NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
 NEXTAUTH_SECRET=y+IEt+xD5QIsaY/ENaxrleTBNPw2ajGmqx9Nyc3cJuM=
