--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^4.18.2",
     "mongodb": "3.7",
     "mongoose": "^6.10.0",
-    "next": "13.4.2",
+    "next": "^13.4.3",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
